# dymp_mpc

./: CMakeLists.txt  README.md
controller/: CMakeLists.txt
controller/dance_controller/: CMakeLists.txt  main.cpp  planner.yaml  planner_wholebody.yaml  robot.yaml
controller/dance_controller/config/: kinematics.yaml  planner_centroid.yaml  planner_wholebody.yaml  poseseq.yaml
model/dymp_mpc_sample_robot1/: sample_robot1.body
motion/mikumiku/: mikumiku_1a.pseq  mikumiku_1b.pseq  mikumiku_1sabi.pseq  mikumiku_intro.pseq
motion/sample/: boxstep.pseq  moonwalk.pseq  steppingstone.pseq  steppingstone_begin.pseq  steppingstone_end.pseq  windingroad.pseq
project/: dymp_mpc_dance_project.cnoid
src/: CMakeLists.txt  FindMKL.cmake  base.h  criticalsection.cpp  criticalsection.h  event.cpp  event.h  kinematics.cpp  kinematics.h  myrobot.cpp  myrobot.h  planner.cpp  planner.h  planner_centroid.cpp  planner_centroid.h  planner_wholebody.cpp  planner_wholebody.h  poseseq.cpp  poseseq.h  thread.cpp  thread.h
